# pbspro

./: .gitignore  .travis.yml  configure.ac  deb_build.sh  openpbs.spec  openpbs.spec.in  pbspro.spec.in
.travis/: do.sh  do_sanitize_mode.sh
ci/: ci  do.sh  do_sanitize_mode.sh  docker-compose.yml  docker-entrypoint
ci/etc/: container-init  do.sh  install-pbs-deps  install-system-packages  killit.sh  macros  parse-valsupp.py
src/cmds/scripts/: pbs_postinstall.in
test/fw/: Makefile.am  setup.py.in
test/fw/ptl/utils/: pbs_dshutils.py
test/tests/functional/: pbs_job_array.py  pbs_mom_dynamic_resource.py  pbs_pbsnodes.py  pbs_qmgr.py  pbs_qstat.py  pbs_qsub_direct_write.py  pbs_qsub_opts_args.py  pbs_snapshot_unittest.py  pbs_svr_dyn_res.py
